--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,5 +1,8 @@
 nav{
-    padding: 1.2rem 8%;
+    position: fixed;
+    width: 80%;
+    left: 10%;
+    padding: .6rem 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -20,10 +23,10 @@ nav li {
     gap: 0 0.2rem;
 }
 nav li span {
-    color: var(--blue);
+    color: rgb(var(--main));
 }
 nav li a:hover {
-    color: var(--blue);
+    color: rgb(var(--main));
 }
 
 .brand{
@@ -32,5 +35,5 @@ nav li a:hover {
     color: white;
 }
 span.brand-colored{
-    color: var(--blue);
+    color: rgb(var(--main));
 }
