--- a/src/global.css
+++ b/src/global.css
@@ -9,10 +9,7 @@
 :root {
   --black: #171717;
   --dark-gray: #585858;
-  --blue: rgb(59, 130, 246);
-  --cyan: #18b6f6;
-  --purple: #ac7ff4;
-  --dark-purple: #713fc2;
+  --main: 59, 130, 246;
 }
 
 body {
@@ -23,8 +20,13 @@ body {
   background-color: var(--black);
 }
 
+main{
+  z-index: 1;
+  backdrop-filter: blur(40px);
+}
+
 .main-div{
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -32,5 +34,14 @@ a, p, h1, h2, h3, h4 {
   color: white;
   transition: ease .15s;
   margin: 0;
+  text-decoration: none;
+}
+
+button{
+  font-size: 1.1rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  transition: ease .2s;
 }
 
