--- a/src/components/Side-Mail/sidemail.css
+++ b/src/components/Side-Mail/sidemail.css
@@ -4,21 +4,8 @@ div{
     flex-direction: column;
     align-items: center;
     bottom: 0;
-    left: 5rem;
+    right: 5rem;
 }
-div a {
-    color: white;
-}
-div a img {
-    width: 1.4rem;
-    padding: 0.4rem 0;
-    filter: invert(1);
-    transition: ease 0.2s;
-}
-div a img:hover {
-    transform: translateY(-4px);
-}
-
 div::after{
     content: '';
     display: block;
@@ -26,4 +13,15 @@ div::after{
     height: 7rem;
     margin-top: 0.6rem;
     background-color: white;
+}
+div a {
+    position: absolute;
+    bottom: 14.6rem;
+    color: white;
+    transform: rotate(90deg);
+}
+div a:hover {
+    transform: rotate(90deg)
+    translateX(-4px);
+
 }
