--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,5 +1,6 @@
 section{
-
+    width: 100%;
+    min-height: 100vh;
 }
 .container{
     padding: 3rem 14%;
@@ -13,6 +14,8 @@ section{
 }
 .profile-pic{
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 18rem;
     height: 18rem;
     border-radius: 0.4rem;
@@ -25,9 +28,9 @@ section{
     content: '';
     display: block;
     position: absolute;
-    width: 18.04rem;
-    height: 18.04rem;
-    border-radius: 0.6rem;
+    width: 18rem;
+    height: 18rem;
+    border-radius: 0.5rem;
     border: 2px solid rgb(var(--main));
     transform: translate(-7.5px, -7.5px);
     z-index: -1;
@@ -37,11 +40,11 @@ section{
     content: '';
     display: block;
     position: absolute;
-    width: 18.04rem;
-    height: 18.04rem;
-    border-radius: 0.6rem;
+    width: 18rem;
+    height: 18rem;
+    border-radius: 0.5rem;
     border: 2px solid rgb(var(--main));
-    transform: translate(2px, 2px);
+    transform: translate(7.5px, 7.5px);
     z-index: -1;
     transition: ease .2s;
 }
@@ -49,21 +52,21 @@ section{
     content: '';
     display: block;
     position: absolute;
-    width: 18.04rem;
-    height: 18.04rem;
-    border-radius: 0.6rem;
+    width: 18rem;
+    height: 18rem;
+    border-radius: 0.4rem;
     border: 2px solid rgb(var(--main));
-    transform: translate(-2.5px, -2.5px);
+    transform: translate(0px, 0px);
 }
 .profile-pic:hover::before{
     content: '';
     display: block;
     position: absolute;
-    width: 18.04rem;
-    height: 18.04rem;
-    border-radius: 0.6rem;
+    width: 18rem;
+    height: 18rem;
+    border-radius: 0.4rem;
     border: 2px solid rgb(var(--main));
-    transform: translate(-2.5px, -2.5px);
+    transform: translate(0px, 0px);
 }
 
 .profile-info{
