--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -16,6 +16,11 @@ section{
 form{
     width: 100%;
     display: flex;
+    flex-direction: column;
+}
+.form-container{
+    width: 100%;
+    display: flex;
     gap: 3rem;
 }
 .inputs{
@@ -61,4 +66,16 @@ textarea{
 }
 textarea:hover{
     border: 2px solid rgb(var(--main), 1);
+}
+
+.send-btn{
+    align-self: flex-end;
+    background-color: rgb(var(--main), 1);
+    color: white;
+    padding: 0.6rem 2rem;
+    margin: 1rem 0;
+    border-radius: 0.4rem;
+}
+.send-btn:hover{
+    background-color: rgb(var(--main), 0.6);
 }
