--- a/src/components/Career/career.css
+++ b/src/components/Career/career.css
@@ -26,7 +26,6 @@ section{
     width: 8rem;
     height: 3rem;
     color: white;
-    border-bottom-right-radius: 0.4rem;
     padding-left: 1rem;
     cursor: pointer;
     transition: all ease .2s;
@@ -62,4 +61,43 @@ section{
     display: flex;
     flex-direction: column;
     gap: 0.6rem;
+}
+
+
+@media only screen and (max-width: 1024px) {
+    .container{
+        padding: 3rem 20%;
+    }
+    .content{
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1.6rem;
+    }
+    .job-list{
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        border-left: none;
+        border-bottom: 1px solid rgb(var(--main), 0.4);
+    }
+}
+
+@media only screen and (max-width: 680px) {
+    .container{
+        padding: 3rem 8%;
+    }
+    .content{
+        margin-top: 3rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1.6rem;
+    }
+    .job-list{
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        border-left: none;
+        border-bottom: 1px solid rgb(var(--main), 0.4);
+    }
 }
