--- a/src/components/Side-Mail/sidemail.css
+++ b/src/components/Side-Mail/sidemail.css
@@ -1,10 +1,13 @@
 div{
+    opacity: 1;
     position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
     bottom: 0;
     right: 5rem;
+    z-index: 5;
+    transition: ease .2s;
 }
 div::after{
     content: '';
@@ -24,4 +27,11 @@ div a:hover {
     transform: rotate(90deg)
     translateX(-4px);
 
+}
+
+
+@media only screen and (max-width: 768px) {
+    div{
+        opacity: 0;
+    }
 }
