--- a/src/components/Side-Social/sidesocial.css
+++ b/src/components/Side-Social/sidesocial.css
@@ -1,10 +1,13 @@
 div{
+    opacity: 1;
     position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
     bottom: 0;
     left: 5rem;
+    z-index: 5;
+    transition: ease .2s;
 }
 div a {
     color: white;
@@ -25,4 +28,11 @@ div::after{
     height: 7rem;
     margin-top: 0.6rem;
     background-color: white;
+}
+
+
+@media only screen and (max-width: 768px) {
+    div{
+        opacity: 0;
+    }
 }
