--- a/src/components/Work/work.css
+++ b/src/components/Work/work.css
@@ -15,7 +15,7 @@ section{
     text-align: center;
 }
 .featured-projects{
-    margin-top: 4rem;
+    margin: 4rem 0;
 }
 
 .project-main{
@@ -41,6 +41,7 @@ section{
     left: 55%;
     display: flex;
     flex-direction: column;
+    transition: ease 0.2;
 }
 
 .title-l{
@@ -54,10 +55,11 @@ section{
 .project-title{
     font-size: 2rem;
     font-weight: 600;
+    color: rgb(236, 236, 236);
 }
 
 .description{
-    width: 26rem;
+    width: 100%;
     color: white;
     background-color: rgba(var(--darker-gray), 0.6);
     backdrop-filter: blur(2px);
@@ -67,7 +69,7 @@ section{
 }
 
 .techs{
-    width: 28rem;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
@@ -83,7 +85,7 @@ section{
 }
 
 .links{
-    width: 28rem;
+    width: 100%;
     display: flex;
     justify-content: flex-end;
     gap: 1.2rem;
@@ -92,11 +94,14 @@ section{
 
 .other-projects{
     margin-top: 4rem;
-    columns: 3;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 2rem;
 }
 
 .other-project{
-    width: 100%;
+    width: 42%;
     display: flex;
     flex-direction: column;
     gap: 1.4rem;
@@ -148,3 +153,121 @@ section{
     filter: brightness(110%);
     margin: 0;
 }
+
+@media only screen and (max-width: 1280px) {
+    .container{
+        padding: 3rem 12%;
+        overflow: hidden;
+    }
+    .data{
+        width: 26rem;
+        position: relative;
+        left: 46%;
+        display: flex;
+        flex-direction: column;
+    }
+    .other-projects{
+        margin-top: 4rem;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 2rem 0;
+    }
+    .other-project{
+        width: 40%;
+        margin: 0 auto;
+    }
+
+}
+@media only screen and (max-width: 768px) {
+    .container{
+        width: 100%;
+        padding: 3rem 0;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .project-main{
+        width: 90%;
+        height: fit-content;
+        padding: 2rem 0;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        border-bottom: 1px solid white;
+    }
+    .image{
+        position: relative;
+        width: 100%;
+    }
+    .data{
+        position: relative;
+        left: 0;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .title-l{
+        align-self: flex-start;
+    }
+    .badge{
+        text-align: left;
+        font-size: 1.2rem;
+        color:rgba(var(--main), 0.7)
+    }
+    .project-title{
+        font-size: 2rem;
+        font-weight: 600;
+    }
+    
+    .description{
+        width: 90%;
+        color: white;
+        background-color: rgba(var(--darker-gray), 1);
+        padding: 1rem;
+        margin: 1rem auto;
+        border-radius: 0.8rem;
+    }
+    .techs{
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        gap: .6rem;
+        margin-bottom: 1rem;
+    }
+    .tech{
+        font-size: 0.9rem;
+        background-color: rgba(var(--darker-gray), 1);
+        padding: 0.4rem;
+        border-radius: 0.4rem;
+    }
+    .links{
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        gap: 1.2rem;
+    }
+    .other-projects{
+        margin-top: 4rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 2rem 0;
+    }
+    .other-project{
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        gap: 1.4rem;
+        padding: 1.5rem;
+        margin: 0 auto;
+        background-color: rgba(var(--darker-gray), 0.5);
+        border-radius: .2rem;
+        transition: ease .2s;
+        break-inside: avoid;
+    }
+}
+
