--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -166,7 +166,7 @@ span.brand-colored{
         justify-content: space-between;
         align-items: flex-start;
         width: 60%;
-        height: 60vh;
+        height: 70vh;
         gap: 1rem;
         box-shadow: 0px 0px 12px 12px var(--darker-gray);
     }
@@ -198,6 +198,6 @@ span.brand-colored{
         height: 2rem;
         display: flex;
         justify-content: space-evenly;
-        padding: 0 1rem;
+        padding: 0 .8rem;
     }
 }
