--- a/src/components/Side-Social/sidesocial.css
+++ b/src/components/Side-Social/sidesocial.css
@@ -14,6 +14,7 @@ div a {
 }
 div a img {
     width: 1.4rem;
+    height: 1.4rem;
     padding: 0.4rem 0;
     transition: ease 0.2s;
 }
@@ -33,6 +34,6 @@ div::after{
 
 @media only screen and (max-width: 768px) {
     div{
-        opacity: 0;
+        left: -4rem
     }
 }
